# cargo-livereload-server

./: Cargo.toml  watch.rs
src/: livereload.rs  main.rs  watch.rs
static/: test.html
