[package]
name = "cargo-livereload-server"
version = "0.1.0"
authors = ["Peter Malmgren <ptmalmgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
notify = "4.0.12"
log = "0.4.14"
chrono = "0.4"
env_logger = "0.8.3"
