[package]
name = "lrs"
version = "0.1.0"
authors = ["Peter Malmgren <ptmalmgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "*"
tokio = { version = "1.5", features = ["full"] }
notify = "4.0.15"
structopt = "0.3"
log = "0.4.14"
chrono = "0.4"
env_logger = "0.8.3"
futures-util = "*"
